--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
+Hi,
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+My name is Thomas Adler. I have a background in Economics and a specific interest in development economics.
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+This is a collection of jupyter notebooks, presentations and reports as part of my capstone project for Brainstation's Data Science bootcamp, completed in August 2022 in London.
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+Water is one of human’s most basic needs.It helps us keep healthy, functioning and producing other basic needs such as food and shelter. As a result, access to water heavily impacts the development and prosperity of a country. Health, education, income, production, and inequality are all dependent on access to water. This is an especially important problem in Uganda, where ¾ of the population do not have access to piped water and half of healthcare facilities do not have access to running water. This poverty and inequality also leads to political instability and violence, more than 31,000 people have been killed in conflicts in Uganda alone since 1997. I want to help solve the issue of water access. Uganda has many water points across the country, and they should be enough to service every single citizen. However, too many of them break down and are not repaired. I want to build a model that will better predict which water points have, or are at risk, of breaking down, so the Ugandan government and local public institutions can better monitor, improve and repair crucial water points.
 
-You can edit the `index.html` file to change this content.
+image
 
-# Posts
+Hope you enjoy the analysis and don't hesitate to get in touch:
+[Linkedin](https://www.linkedin.com/in/thomas-adler-31b372149/)
+[Medium](https://medium.com/@chalk_ball)
+[University email](mailto: thomas.adler.18@ucl.ac.uk)
+[Personal email](mailto: thomas0299@gmail.com)
