--- a/index.html
+++ b/index.html
@@ -71,15 +71,21 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Hi,</p>
 
-<p><img src="/futuristic-platipus/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+<p>My name is Thomas Adler. I have a background in Economics and a specific interest in development economics.</p>
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
+<p>This is a collection of jupyter notebooks, presentations and reports as part of my capstone project for Brainstation’s Data Science bootcamp, completed in August 2022 in London.</p>
 
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<p>Water is one of human’s most basic needs.It helps us keep healthy, functioning and producing other basic needs such as food and shelter. As a result, access to water heavily impacts the development and prosperity of a country. Health, education, income, production, and inequality are all dependent on access to water. This is an especially important problem in Uganda, where ¾ of the population do not have access to piped water and half of healthcare facilities do not have access to running water. This poverty and inequality also leads to political instability and violence, more than 31,000 people have been killed in conflicts in Uganda alone since 1997. I want to help solve the issue of water access. Uganda has many water points across the country, and they should be enough to service every single citizen. However, too many of them break down and are not repaired. I want to build a model that will better predict which water points have, or are at risk, of breaking down, so the Ugandan government and local public institutions can better monitor, improve and repair crucial water points.</p>
 
-<h1 id="posts">Posts</h1>
+<p>image</p>
+
+<p>Hope you enjoy the analysis and don’t hesitate to get in touch:
+<a href="https://www.linkedin.com/in/thomas-adler-31b372149/">Linkedin</a>
+<a href="https://medium.com/@chalk_ball">Medium</a>
+<a href="mailto: thomas.adler.18@ucl.ac.uk">University email</a>
+<a href="mailto: thomas0299@gmail.com">Personal email</a></p>
 
 
 
