--- a/about/index.html
+++ b/about/index.html
@@ -102,14 +102,15 @@ window.onload = wrap_img;
   <li>Loves weightlifting.</li>
 </ul>
 
-<p>Don’t hesitate to get in touch:
-<a href="https://www.linkedin.com/in/thomas-adler-31b372149/">Linkedin</a></p>
+<p>Don’t hesitate to get in touch:</p>
+
+<p><a href="https://www.linkedin.com/in/thomas-adler-31b372149/">Linkedin</a></p>
 
 <p><a href="https://medium.com/@chalk_ball">Medium</a></p>
 
-<p><a href="mailto: thomas.adler.18@ucl.ac.uk">University email</a></p>
+<p><a href="mailto:thomas.adler.18@ucl.ac.uk">University email</a></p>
 
-<p><a href="mailto: thomas0299@gmail.com">Personal email</a></p>
+<p><a href="mailto:thomas0299@gmail.com">Personal email</a></p>
 
 
   </div>
