--- a/index.html
+++ b/index.html
@@ -91,23 +91,25 @@ window.onload = wrap_img;
 
 <p>My name is Thomas Adler. I have a background in Economics and a specific interest in development economics.</p>
 
-<p>&lt;/p&gt;This is a collection of jupyter notebooks, presentations and reports as part of my capstone project for Brainstation’s Data Science bootcamp, completed in August 2022 in London.&lt;/p&gt;</p>
+<p>This is a collection of jupyter notebooks, presentations and reports as part of my capstone project for Brainstation’s Data Science bootcamp, completed in August 2022 in London.</p>
 
-<p>&lt;/p&gt;Water is one of human’s most basic needs.It helps us keep healthy, functioning and producing other basic needs such as food and shelter. As a result, access to water heavily impacts the development and prosperity of a country. Health, education, income, production, and inequality are all dependent on access to water.&lt;p&gt;</p>
+<p>Water is one of human’s most basic needs.It helps us keep healthy, functioning and producing other basic needs such as food and shelter. As a result, access to water heavily impacts the development and prosperity of a country. Health, education, income, production, and inequality are all dependent on access to water.</p>
 
-<p>&lt;/p&gt;This is an especially important problem in Uganda, where ¾ of the population do not have access to piped water and half of healthcare facilities do not have access to running water. This poverty and inequality also leads to political instability and violence, more than 31,000 people have been killed in conflicts in Uganda alone since 1997. I want to help solve the issue of water access. Uganda has many water points across the country, and they should be enough to service every single citizen. However, too many of them break down and are not repaired.&lt;/p&gt;</p>
+<p>This is an especially important problem in Uganda, where ¾ of the population do not have access to piped water and half of healthcare facilities do not have access to running water. This poverty and inequality also leads to political instability and violence, more than 31,000 people have been killed in conflicts in Uganda alone since 1997. I want to help solve the issue of water access. Uganda has many water points across the country, and they should be enough to service every single citizen. However, too many of them break down and are not repaired.</p>
 
-<p>&lt;/p&gt;I want to build a model that will better predict which water points have, or are at risk, of breaking down, so the Ugandan government and local public institutions can better monitor, improve and repair crucial water points.&lt;/p&gt;</p>
+<p>I want to build a model that will better predict which water points have, or are at risk, of breaking down, so the Ugandan government and local public institutions can better monitor, improve and repair crucial water points.</p>
 
 <p><img src="/futuristic-platipus/images/man_dog.jpeg" alt="" /></p>
 
-<p>&lt;/p&gt;Hope you enjoy the analysis and don’t hesitate to get in touch:&lt;p&gt;</p>
+<p>Hope you enjoy the analysis and don’t hesitate to get in touch:</p>
 
-<p>[Linkedin](https://www.linkedin.com/in/thomas-adler-31b372149/)<p>
-<p>[Medium](https://medium.com/@chalk_ball)<p>
-<p>[University email](mailto: thomas.adler.18@ucl.ac.uk)<p>
-<p>[Personal email](mailto: thomas0299@gmail.com)<p>
-</p></p></p></p></p></p></p></p>
+<p><a href="https://www.linkedin.com/in/thomas-adler-31b372149/">Linkedin</a></p>
+
+<p><a href="https://medium.com/@chalk_ball">Medium</a></p>
+
+<p><a href="mailto: thomas.adler.18@ucl.ac.uk">University email</a></p>
+
+<p><a href="mailto: thomas0299@gmail.com">Personal email</a></p>
 
 
 
