--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@ Hi,
 My name is Thomas Adler. I have a background in Economics and a specific interest in development economics.
 
 
-This is a collection of jupyter notebooks, presentations and reports as part of my capstone project for Brainstation's Data Science bootcamp, completed in August 2022 in London.
+This is a collection of jupyter notebooks for my capstone project for Brainstation's Data Science bootcamp, completed in August 2022 in London.
+
+
+Presentation and written report of this project can be found on my github and medium.
 
 
 Water is one of human’s most basic needs.It helps us keep healthy, functioning and producing other basic needs such as food and shelter. As a result, access to water heavily impacts the development and prosperity of a country. Health, education, income, production, and inequality are all dependent on access to water.
