--- a/about/index.html
+++ b/about/index.html
@@ -98,7 +98,10 @@ window.onload = wrap_img;
 <a href="mailto:thomas.adler.18@ucl.ac.uk">University email</a>
 <br />
 <br />
-<a href="mailto:thomas0299@gmail.com">Personal email</a></p>
+<a href="mailto:thomas0299@gmail.com">Personal email</a>
+<br />
+<br />
+<img src="/futuristic-platipus/images/white_pic.jpeg" alt="" /></p>
 
   </div>
 
