--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Capstone project for Brainstation’s Data Science bootcamp, completed in August 2022 in London." />
 <meta property="og:description" content="Capstone project for Brainstation’s Data Science bootcamp, completed in August 2022 in London." />
-<link rel="canonical" href="https://thomas0299.github.io/futuristic-platipus/futuristic-platipus/" />
-<meta property="og:url" content="https://thomas0299.github.io/futuristic-platipus/futuristic-platipus/" />
+<link rel="canonical" href="https://thomas0299.github.io/futuristic-platipus/" />
+<meta property="og:url" content="https://thomas0299.github.io/futuristic-platipus/" />
 <meta property="og:site_name" content="Reducing conflict by improving water access in Uganda" />
-<meta property="og:image" content="https://thomas0299.github.io/futuristic-platipus/futuristic-platipus/images/logo.png" />
+<meta property="og:image" content="https://thomas0299.github.io/futuristic-platipus/images/logo.png" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="https://thomas0299.github.io/futuristic-platipus/futuristic-platipus/images/logo.png" />
+<meta property="twitter:image" content="https://thomas0299.github.io/futuristic-platipus/images/logo.png" />
 <meta property="twitter:title" content="Reducing conflict by improving water access in Uganda" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Capstone project for Brainstation’s Data Science bootcamp, completed in August 2022 in London.","headline":"Reducing conflict by improving water access in Uganda","image":"https://thomas0299.github.io/futuristic-platipus/futuristic-platipus/images/logo.png","name":"Reducing conflict by improving water access in Uganda","url":"https://thomas0299.github.io/futuristic-platipus/futuristic-platipus/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"Capstone project for Brainstation’s Data Science bootcamp, completed in August 2022 in London.","headline":"Reducing conflict by improving water access in Uganda","image":"https://thomas0299.github.io/futuristic-platipus/images/logo.png","name":"Reducing conflict by improving water access in Uganda","url":"https://thomas0299.github.io/futuristic-platipus/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/futuristic-platipus/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://thomas0299.github.io/futuristic-platipus/futuristic-platipus/feed.xml" title="Reducing conflict by improving water access in Uganda" /><link rel="shortcut icon" type="image/x-icon" href="/futuristic-platipus/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
+<link rel="stylesheet" href="/futuristic-platipus/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://thomas0299.github.io/futuristic-platipus/feed.xml" title="Reducing conflict by improving water access in Uganda" /><link rel="shortcut icon" type="image/x-icon" href="/futuristic-platipus/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 
 <script>
