--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ I want to build a model that will better predict which water points have, or are
 
 ![]({{site.baseurl}}/images/man_dog.jpeg)
 
+I am especially thankful to the [Water Point Data Exchange](https://www.waterpointdata.org/), the [Armed Conflict Location & Event Data Project](https://acleddata.com/#/dashboard) and the [Ugandan Bureau of Statistics](https://www.ubos.org/) for providing the data for my project. The thorough documentation, ease of use and accessibility of the data made my project possible and enjoyable. If these datasets and this project has been of use to you, consider [donating to the WPDx](https://globalwaterchallenge.networkforgood.com/projects/145424-wpdx-fundraising-page).
+
 Hope you enjoy the analysis and don't hesitate to get in touch:
 
 [Linkedin](https://www.linkedin.com/in/thomas-adler-31b372149/)
